--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 layout: default
 ---
 <section id="publications">
-    <div class="container pt-3 my-3 border">
+    <div class="container pt-3 my-3 border rounded">
         <h2>Publications</h2>
         {% include publication-list.html %}
     </div>
