recordings, favicon.png

--- a/index.html
+++ b/index.html
@@ -9,3 +9,10 @@ layout: default
         {% include publication-list.html %}
     </div>
 </section>
+
+<section id="recordings">
+    <div class="container pt-3 my-3 border rounded">
+        <h2>Recordings</h2>
+        {% include recordings.html %}
+    </div>
+</section>
